# OpenGL-QuickStart

./: .gitignore  .gitmodules  CMakeLists.txt
include/: camera.h  common.h  font.h  mesh.h  model.h  shader.h
include/glad/: glad.h
res/shader/: font_fragmentShader.glsl  font_vertexShader.glsl  fragmentShader.glsl  vertexShader.glsl
src/: common.cpp  font.cpp  glad.c  main.cpp  mesh.cpp  model.cpp
